--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -1,35 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+<!-- login.html -->
+
+{% extends 'base.html' %}
+
+{% block title %}Login{% endblock %}
+
+{% block additional_styles %}
     <style>
         .container {
-          width: 300px;
-          margin: 0 auto;
-          border: 1px solid black;
-          padding: 20px;
+            width: 300px;
+            margin: 0 auto;
+            border: 1px solid black;
+            padding: 20px;
         }
         .form-group {
-          margin-bottom: 10px;
+            margin-bottom: 10px;
         }
         .form-label {
-          display: block;
-          font-weight: bold;
+            display: block;
+            font-weight: bold;
         }
         .form-input {
-          display: block;
-          width: 100%;
+            display: block;
+            width: 100%;
         }
         .form-button {
-          display: block;
-          width: 100%;
-          height: 40px;
+            display: block;
+            width: 100%;
+            height: 40px;
         }
-      </style>
-</head>
-<body>
+    </style>
+{% endblock %}
+
+{% block content %}
     <div class="container">
         <h1>Login Page</h1>
         <form method="POST" action="/auth/login/">
@@ -45,5 +47,4 @@
             <button class="form-button" type="submit">Login</button>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
