--- a/authentication/templates/signup.html
+++ b/authentication/templates/signup.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Sign Up{% endblock %}
+
+{% block content %}
     <form method="POST" action="/auth/signup/">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-secondary">Save</button>
+        <div class="container">
+            <h1>Sign Up Page</h1>
+            {{ form.as_p }}
+            <button type="submit" class="save btn btn-secondary">Save</button>
+        </div>
     </form>
-</body>
-</html>
+{% endblock %}
