--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         body {
             padding-top: 56px; /* Adjust according to your navbar height */
         }
+        {% block additional_styles %}{% endblock %}
     </style>
 </head>
 <body>
@@ -28,22 +29,22 @@
                 <!-- Authentication Links -->
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link" href="{% url 'authentication:logout' %}">Logout</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        <a class="nav-link" href="{% url 'authentication:login' %}">Login</a>
                     </li>
                 {% endif %}
                 <!-- Other Links -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'pengumuman' %}">Pengumuman</a>
+                    <a class="nav-link" href="{% url 'pengumuman:pengumuman_list' %}">Pengumuman</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'layanan' %}">Layanan</a>
+                    <a class="nav-link" href="{% url 'layanan:show_all_layanan' %}">Layanan</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'update_profile' %}">Update Profile</a>
+                    <a class="nav-link" href="{% url 'administration:update_profile' %}">Update Profile</a>
                 </li>
             </ul>
         </div>
