--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,18 @@
         body {
             padding-top: 56px; /* Adjust according to your navbar height */
         }
+
+        .navbar {
+            background-color: #f8f9fa; /* Lighter color */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+        }
         {% block additional_styles %}{% endblock %}
     </style>
 </head>
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="#">Rukun Chat</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,7 +49,7 @@
                     <a class="nav-link" href="{% url 'layanan:show_all_layanan' %}">Layanan</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'administration:update_profile' %}">Update Profile</a>
+                    <a class="nav-link" href="{% url 'administration:view_profile' %}">Profile</a>
                 </li>
             </ul>
         </div>
