--- a/templates/base.html
+++ b/templates/base.html
@@ -8,24 +8,45 @@
     <title>{% block title %}Rukun Chat{% endblock %}</title>
     <!-- Add Bootstrap CSS link or other stylesheets for styling -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap">
     <style>
         /* Add your custom styles here */
         body {
-            padding-top: 56px; /* Adjust according to your navbar height */
+            padding-top: 76px; /* Adjust according to your navbar height */
+            font-family: 'Montserrat', sans-serif; /* Use Montserrat font */
+
         }
 
+
         .navbar {
-            background-color: #f8f9fa; /* Lighter color */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+        height: 70px; /* Increased height */
+        background-color: #ffffff; /* Lighter color */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
         }
+
+        .navbar-brand {
+        font-family: 'Montserrat', sans-serif; /* Use Montserrat font */
+        font-size: 24px; /* Adjust font size */
+        font-weight: bold; /* Make it bold */
+        }
+
+        .navbar-logo {
+        height: 30px; /* Set the height of the logo */
+        margin-right: 10px; /* Adjust margin for spacing */
+        }
+
         {% block additional_styles %}{% endblock %}
     </style>
 </head>
 <body>
 
+    {% load static %}
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">Rukun Chat</a>
+        <a class="navbar-brand" href="#">
+            <img src="https://w7.pngwing.com/pngs/278/613/png-transparent-crowd-drawing-cartoon-community-miscellaneous-audience-human-behavior-thumbnail.png" alt="Rukun Chat Logo" class="navbar-logo">
+            Rukun Chat
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
