Menambahkan fungsi menampilkan dan menambahkan agenda kegiatan

--- a/agenda/templates/agenda/index.html
+++ b/agenda/templates/agenda/index.html
@@ -1,3 +1,6 @@
+<button type="button">
+    <a href="{% url 'agenda:add_kegiatan' %}"> Tambahkan kegiatan </a>
+</button>
 {% if listKegiatan %}
     <ul>
     {% for kegiatan in listKegiatan %}
