--- a/administration/templates/view_profile.html
+++ b/administration/templates/view_profile.html
@@ -22,6 +22,27 @@
 
             <a href="{% url 'administration:update_profile' %}" class="btn btn-primary">Update Profile</a>
 
+            {% if pengurus %}
+                <h3 class="mt-4">Pengurus Information</h3>
+                <p><strong>Jabatan:</strong> {{ pengurus.jabatan }}</p>
+                <p><strong>RT:</strong> {{ anggota.RT.nomor }}</p>
+                <p><strong>RW:</strong> {{ anggota.RT.RW.nomor }}</p>
+                <p><strong>Kecamatan:</strong> {{ anggota.RT.RW.kecamatan }}</p>
+                <p><strong>Kabupaten:</strong> {{ anggota.RT.RW.kabupaten }}</p>
+                <p><strong>Provinsi:</strong> {{ anggota.RT.RW.provinsi }}</p>
+            {% else %}
+                {% if anggota %}
+                    <h3 class="mt-4">Anggota Information</h3>
+                    <p><strong>RT:</strong> {{ anggota.RT.nomor }}</p>
+                    <p><strong>RW:</strong> {{ anggota.RT.RW.nomor }}</p>
+                    <p><strong>Kecamatan:</strong> {{ anggota.RT.RW.kecamatan }}</p>
+                    <p><strong>Kabupaten:</strong> {{ anggota.RT.RW.kabupaten }}</p>
+                    <p><strong>Provinsi:</strong> {{ anggota.RT.RW.provinsi }}</p>
+                {% else %}
+                    <p class="mt-4">Please wait to be assigned to RT/RW. The admin should register you.</p>
+                {% endif %}
+            {% endif %}
+
         </div>
     </div>
 </div>
