--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,10 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
         }
 
+        .navbar-collapse {
+        background-color: #ffffff; /* Lighter color */
+        }
+
         .navbar-brand {
         font-family: 'Montserrat', sans-serif; /* Use Montserrat font */
         font-size: 24px; /* Adjust font size */
@@ -41,7 +45,7 @@
 
     {% load static %}
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg  fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
         <a class="navbar-brand" href="{% url 'authentication:index' %}">
             <img src="{% static 'images/logo.jpg' %}" alt="Rukun Chat Logo" class="navbar-logo">
         </a>
