implementing main branch

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,9 @@
                     <a class="nav-link" href="{% url 'layanan:show_all_layanan' %}">Layanan</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'agenda:index' %}">Agenda</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'administration:view_profile' %}">Profile</a>
                 </li>
             </ul>
