--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -6,7 +6,6 @@
 
 {% block additional_styles %}
     <style>
-
         .container {
             width: 300px;
             margin: 0 auto;
@@ -45,6 +44,9 @@
         .form-button:hover {
             background-color: #0056b3; /* Darker color on hover */
         }
+        .message {
+            color: red;
+        }
         .signup-link {
             text-align: center;
             margin-top: 10px;
@@ -75,6 +77,11 @@
             </div>
             <button class="form-button" type="submit">Login</button>
         </form>
+        <div class="message">
+            {% if message %}
+                {{ message }}
+            {% endif %}
+        </div>
         <div class="signup-link">
             Don't have an account? <a href="{% url 'authentication:signup' %}">Sign up</a>
         </div>
