fix(layanan): fix wrong end date in template

--- a/layanan/templates/layanan.html
+++ b/layanan/templates/layanan.html
@@ -151,7 +151,7 @@
 					<span class="ml-2">
 						Jumlah Pendaftar: {{ item.jumlah_pendaftar }} <br>
 						Start Date: {{ item.start_date|date:"M. j, Y" }} <br>
-						End Date: {{ item.start_date|date:"M. j, Y" }}
+						End Date: {{ item.end_date|date:"M. j, Y" }}
 					</span>
                     </span>
                 </p>
